# meeting-scheduler

./: docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: common.rs  input.rs  mod.rs  output.rs  serde_date.rs
backend/src/api/serde_rfc_3339/: date.rs  mod.rs  offset_date_time.rs
backend/src/app/: business_logic.rs  handlers.rs  middleware.rs  mod.rs
backend/src/database/: mod.rs  models.rs
database/: schema.sql  test_data.sql
tests/backend/: .gitignore  setup.cfg
tests/backend/tests/: conftest.py  test_meeting.py
tests/backend/tests/utils/: actions.py  models.py
