[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-macros = "0.3.7"
dotenvy = "0.15.7"
futures = { version = "0.3.28", default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid", "time"] }
thiserror = "1.0.46"
time = { version = "0.3.23", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
